# AI-UFD

./: CITATION.cff  LICENSE  README.md  SECURITY.md
code/: 00_common.R  01_install_packages.R  02_figure_02_cross_platform.R  03_figure_03_clinical_concordance.R  04_figure_04_low_flow_screening.R  05_figure_05_bench_overall.R  06_figure_06_bench_by_condition.R  07_figure_s1_cross_platform_tqmax_qave.R  08_figure_s2_cross_platform_flowtime_voidtime.R  09_figure_s3_bench_oneplus_qmax_vv.R  10_figure_s4_bench_redmi_qmax_vv.R  99_main.R  README.md
non_core_public_engineering/: README.md  build.gradle.kts  settings.gradle.kts
non_core_public_engineering/app/: build.gradle.kts
non_core_public_engineering/app/src/main/: AndroidManifest.xml
non_core_public_engineering/app/src/main/assets/: models.json
non_core_public_engineering/app/src/main/cpp/: CMakeLists.txt
non_core_public_engineering/app/src/main/cpp/jni/: native-lib.cpp  native-lib.h
non_core_public_engineering/app/src/main/res/anim/: nav_slide_in_left.xml  nav_slide_in_right.xml  nav_slide_out_left.xml  nav_slide_out_right.xml
non_core_public_engineering/app/src/main/res/drawable/: bg_marker.xml  bg_shell_button_primary.xml  bg_shell_button_secondary.xml  bg_shell_card.xml  bg_shell_gradient.xml  bg_shell_playback_action.xml  bg_shell_playback_seekbar.xml  bg_shell_playback_thumb.xml  bg_shell_processing_action_warning.xml  bg_shell_progress.xml  bg_video_assistant_footer.xml  (+26 more)
non_core_public_engineering/gradle/: libs.versions.toml
non_core_public_engineering/gradle/wrapper/: gradle-wrapper.properties
(+115 files in other folders)
